chore(seo): implement SEO-GEO-OPTIMIZER v2.0 skills, update schemas, sitemap, add tracking files

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ temp/
 *.tmp
 Aryan_Panwar.jpg
 Portfolio_Audit_Report_Aryan.docx
+
+# SEO internal tracking
+geo_tracking.json
+keyword_clusters.json
